# cosmic-pomodoro

./: Cargo.toml  justfile
i18n/en/: cosmic_pomodoro.ftl
res/: com.example.CosmicPomodoro.desktop  com.example.CosmicPomodoro.metainfo.xml
src/: app.rs  duration_extension.rs  icon_cache.rs  main.rs
src/core/: icon_cache.rs  mod.rs  pomodoro_timer.rs
src/views/: settings.rs
