[package]
name = "cosmic-pomodoro"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
i18n-embed-fl = "0.8"
once_cell = "1.19.0"
open = "5.1.3"
rust-embed = "8.3.0"
tokio = { version = "1.37.0", features = ["full"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["dbus-config", "tokio", "winit", "wgpu"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

# Cargo deb
# Edit here to customize the package metadata
# Especially the Assets section
[package.metadata.deb]
maintainer = "Spoomer, <spoomer@gmx.de>"
copyright = "2024 Spoomer"
license-file = "LICENSE"
extended-description = """\
Pomodoro timer. \
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/cosmic-pomodoro", "usr/bin/cosmic-pomodoro", "755"],
    ["res/com.example.CosmicPomodoro.metainfo.xml", "usr/share/metainfo/com.example.CosmicPomodoro.metainfo.xml", "644"],
    ["res/com.example.CosmicPomodoro.desktop", "usr/share/applications/com.example.CosmicPomodoro.desktop", "644"],
    ["res/icons/hicolor/", "usr/share/icons/hicolor/", "644"]
]